--- a/src/pages/parlons-web/[slug].astro
+++ b/src/pages/parlons-web/[slug].astro
@@ -77,6 +77,11 @@ const next = idx >= 0 && idx < all.length - 1 ? all[idx + 1] : null; // plus anc
       "Création de site vitrine",
       "Design",
       "Accessibilité",
+      "Maintenance",
+      "Plugins",
+      "Astuces",
+      "Securité",
+      "Themes",
     ]}
   />
 
