--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -192,7 +192,7 @@ const business = {
       <div class="footer__content" id="footer-panel-support" hidden>
         <ul class="footer__list">
           <li><a href="/contact#faq">FAQ</a></li>
-          <li><a href="/contact">Contactez-nous</a></li>
+          <li><a href="/contact">Me contacter</a></li>
         </ul>
       </div>
     </nav>
@@ -218,8 +218,9 @@ const business = {
             >
           </li>
           <li>
-            <a href="tel:+33620681392">06 20 68 13 92 Lun–Ven, 9h–18h</a>
+            <a href="tel:+33620681392">06 20 68 13 92 </a>
           </li>
+          <li>Lun–Ven, 9h–18h</li>
           <li><a href="/contact">Formulaire de contact</a></li>
           <li class="zones">Béziers • Partout en France 🇫🇷</li>
         </ul>
